--- a/dev/app/app.layout.html
+++ b/dev/app/app.layout.html
@@ -1,10 +1,17 @@
-<h1>Component Router</h1>
 <div class="container">
-	<nav>
-		<a class="nav-link" routerLink="/" routerLinkActive="active"><i class="fa fa-home"></i> Home</a>
-		<a class="nav-link" routerLink="/about" routerLinkActive="active"><i class="fa fa-info-circle"></i> About</a>
+	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar-header">
+            <a class="nav-link" routerLink="/" routerLinkActive="active"><i class="fa fa-home"></i> Home</a>
+            <a class="nav-link" routerLink="/about" routerLinkActive="active"><i class="fa fa-info-circle"></i> About</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="https://github.com/projectbox99/mean">Github</a></li>
+            </ul>
+        </div>
+	</div>
 
-		<!-- Routed views go here -->
-		<router-outlet></router-outlet>
-	</nav>
+	<!-- Routed views go here -->
+	<router-outlet></router-outlet>\
 </div>
+
