--- a/dev/app/app.layout.html
+++ b/dev/app/app.layout.html
@@ -17,6 +17,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a class="nav-link" routerLink="/" routerLinkActive="active"><i class="fa fa-home"></i> Home</a></li>
                     <li><a class="nav-link" routerLink="/about" routerLinkActive="active"><i class="fa fa-info-circle"></i> About</a></li>
+                    <li><a class="nav-link" routerLink="/ads" routerLinkActive="active"><i class="fa fa-info-circle"></i> Ads</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                         <ul class="dropdown-menu">
