--- a/dev/app/app.layout.html
+++ b/dev/app/app.layout.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Brand</a>
+                <a class="navbar-brand" routerLink="/"><img src="/assets/funny-starbucks-logo.jpg" height="55" width="55"/></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -21,8 +21,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a class="nav-link" routerLink="/" routerLinkActive="active" (click)="Router.navigate(['/'])" ><span class="glyphicon glyphicon-align-left"></span> Home</a></li>
-                            <li><a class="nav-link" routerLink="/about" routerLinkActive="active" (click)="Router.navigate(['/about'])" >About</a></li>
+                            <li><a class="nav-link" routerLink="/" routerLinkActive="active" (click)="router.navigate(['/'])" ><span class="glyphicon glyphicon-align-left"></span> Home</a></li>
+                            <li><a class="nav-link" routerLink="/about" routerLinkActive="active" (click)="router.navigate(['/about'])" >About</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Separated link</a></li>
                             <li role="separator" class="divider"></li>
@@ -54,6 +54,7 @@
     </nav>
 
 	<!-- Routed views go here -->
-	<router-outlet></router-outlet>\
+	<router-outlet></router-outlet>
+    <p>FIN</p>
 </div>
 
