--- a/dev/app/app.layout.html
+++ b/dev/app/app.layout.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="fluid-container">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
