--- a/dev/app/app.layout.html
+++ b/dev/app/app.layout.html
@@ -37,6 +37,7 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a class="nav-link" routerLink="/login" routerLinkActive="active"><i class="fa fa-info-circle"></i> Login</a></li>
                     <li><button class="btn-info" (click)="router.navigate(['/register'])"><span class="glyphicon glyphicon-registration-mark"></span> <strong>Register</strong></button></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
