--- a/dev/app/app.layout.html
+++ b/dev/app/app.layout.html
@@ -53,6 +53,32 @@
         </div><!-- /.container-fluid -->
     </nav>
 
+    <div class="login-form" style="text-align: left">
+        <form *ngIf="active" class="form-horizontal" #userForm="ngForm">
+            <div class="form-group row">
+                <label for="username" class="col-sm-2 col-form-label">Username</label>
+                <div class="col-sm-3">
+                    <input type="text" class="form-control" id="username" placeholder="Username"
+                        [(ngModel)]="user.username" name="username" #usrName="ngModel" >
+                        <div [hidden]="usrName.valid || usrName.pristine" class="alert alert-danger">
+                            Username is required
+                        </div>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="password" class="col-sm-2 col-form-label">Password</label>
+                <div class="col-sm-3">
+                    <input type="password" class="form-control" id="password" placeholder="Password" required
+                        [(ngModel)]="user.password" name="password" #pswd="ngModel" >
+                        <div [hidden]="pswd.valid || pswd.pristine" class="alert alert-danger">
+                            Password is required
+                        </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
 	<!-- Routed views go here -->
 	<router-outlet></router-outlet>
     <p>FIN</p>
