--- a/dev/app/app.layout.html
+++ b/dev/app/app.layout.html
@@ -71,7 +71,7 @@
             Password: test
         </div>
         <h2>Login</h2>
-        <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+        <form *ngIf="!loggedIn" name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
             <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" name="username" [(ngModel)]="model.username" id="username" #username="ngModel" required />
