--- a/dev/app/app.layout.html
+++ b/dev/app/app.layout.html
@@ -1,5 +1,5 @@
 <div class="fluid-container">
-    <nav class="navbar navbar-default">
+    <nav class="navbar"> <!-- navbar-fixed-top, navbar-inverse -->
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -9,63 +9,93 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" routerLink="/"><img src="/assets/funny-starbucks-logo.jpg" height="55" width="55"/></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a class="nav-link" routerLink="/" routerLinkActive="active"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a class="nav-link" routerLink="/about" routerLinkActive="active"><i class="fa fa-info-circle"></i> About</a></li>
-                    <li><a class="nav-link" routerLink="/ads" routerLinkActive="active"><i class="fa fa-info-circle"></i> Ads</a></li>
-                    <li class="dropdown">
+                    <li class="app-logo">
+                        <a routerLink="/">
+                            <!--<img src="/assets/funny-starbucks-logo.jpg" height="55" width="55"/>-->
+                            <h2 class="app-name">Web<span class="app-name-span">Tech</span><span class="app-name-span2">Ads</span></h2>
+                        </a>
+                    </li>
+                    <!--<li [nav-link-custom]="DodgerBlue" [@navLinkState]="linkState" (click)="toggleLinkState()">-->
+                    <li>
+                        <a class="nav-link" routerLink="/" routerLinkActive="active"><i class="fa fa-home"></i> Home</a>
+                    </li>
+                    <!--<li [nav-link-custom]="DodgerBlue" [@navLinkState]="linkState" (click)="toggleLinkState()">-->
+                    <li>
+                        <a class="nav-link" routerLink="/about" routerLinkActive="active"><i class="fa fa-info-circle"></i> About</a>
+                    </li>
+                    <!--<li [nav-link-custom]="DodgerBlue" [@navLinkState]="linkState" (click)="toggleLinkState()">-->
+                    <li>
+                        <a class="nav-link" routerLink="/ads" routerLinkActive="active"><i class="fa fa-info-circle"></i> Ads</a>
+                    </li>
+                    <li class="dropdown" [@navLinkState]="linkState" (click)="toggleLinkState()">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a class="nav-link" routerLink="/" routerLinkActive="active" (click)="router.navigate(['/'])" ><span class="glyphicon glyphicon-align-left"></span> Home</a></li>
                             <li><a class="nav-link" routerLink="/about" routerLinkActive="active" (click)="router.navigate(['/about'])" >About</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
+                            <li><a class="nav-link" routerLink="/users" routerLinkActive="active" (click)="router.navigate(['/users'])" >Users</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">One more separated link</a></li>
                         </ul>
                     </li>
                 </ul>
-                <form class="navbar-form navbar-left">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
 
-                    <div class="col-md-6 col-md-offset-3">
-                        <h1>Home</h1>
-                        <p>You're logged in with JWT!!</p>
-                        <div>
-                            Users from secure api end point:
-                            <ul>
-                                <li *ngFor="let user of users">{{user.namesFirst}} {{user.namesLast}}</li>
-                            </ul>
-                        </div>
-                        <p><a [routerLink]="['/']">Logout</a></p>
-                    </div>
-                </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><button class="btn-info" (click)="router.navigate(['/register'])"><span class="glyphicon glyphicon-registration-mark"></span> <strong>Register</strong></button></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
+                    <li *ngIf="!loggedIn">
+                        <form class="form-inline login-form" name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+                            <div class="login-group">
+                                <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
+                                    <label for="username">Username</label>
+                                    <input type="text" class="form-control input-sm" name="username" [(ngModel)]="currentUser.username" id="username" #username="ngModel" required />
+                                        <div *ngIf="f.submitted && !username.valid" class="help-block">Username is required
+                                        </div>
+                                </div>
+                                <br>
+                                <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
+                                    <label for="password">Password</label>
+                                    <input type="password" class="form-control input-sm" name="password" [(ngModel)]="currentUser.password" id="password" #password="ngModel" required />
+                                        <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required
+                                        </div>
+                                </div>
+                                <br>
+                                <div *ngIf="error" class="alert alert-danger fail">{{error}}</div>
+                            </div>
+                            <div class="login-button-group">
+                                <button [disabled]="loading" class="btn btn-primary">Login</button>
+                            </div>
+                        </form>
+                    </li>
+
+                    <li *ngIf="loggedIn && currentUser && currentUser.username.length > 0">
+                        <div class="form-group">
+                            <p id="hello">Hello, <strong>{{currentUser.namesFirst || currentUser.username}}</strong></p>
+                        </div>
+                    </li>
+
+                    <li *ngIf="loggedIn">
+                        <div class="form-group">
+                            <button class="btn btn-default" (click)="logout()">Logout</button>
+                        </div>
+                    </li>
+
+                    <li *ngIf="!loggedIn">
+                        <div class="form-group">
+                            <button type="button" class="btn btn-success" (click)="gotoRegistration()">
+                                <span class="glyphicon glyphicon-registration-mark"></span> <strong>Register</strong>
+                            </button>
+                        </div>
                     </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="col-md-6 col-md-offset-3">
+<!--    <div class="col-md-6 col-md-offset-3">
         <div class="alert alert-info">
             Username: test<br />
             Password: test
@@ -74,12 +104,12 @@
         <form *ngIf="!loggedIn" name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
             <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" name="username" [(ngModel)]="model.username" id="username" #username="ngModel" required />
+                <input type="text" class="form-control" name="username" [(ngModel)]="currentUser.username" id="username" #username="ngModel" required />
                 <div *ngIf="f.submitted && !username.valid" class="help-block">Username is required</div>
             </div>
             <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" name="password" [(ngModel)]="model.password" id="password" #password="ngModel" required />
+                <input type="password" class="form-control" name="password" [(ngModel)]="currentUser.password" id="password" #password="ngModel" required />
                 <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
             </div>
             <div class="form-group">
@@ -89,6 +119,7 @@
             <div *ngIf="error" class="alert alert-danger">{{error}}</div>
         </form>
     </div>
+-->
 
 	<!-- Routed views go here -->
 	<router-outlet></router-outlet>
