--- a/dev/app/app.layout.html
+++ b/dev/app/app.layout.html
@@ -52,18 +52,18 @@
                                 <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
                                     <label for="username">Username</label>
                                     <input type="text" class="form-control input-sm" name="username" [(ngModel)]="currentUser.username" id="username" #username="ngModel" required />
-                                        <div *ngIf="f.submitted && !username.valid" class="help-block">Username is required
-                                        </div>
+                                        <!--<div *ngIf="f.submitted && !username.valid" class="help-block">Username is required
+                                        </div>-->
                                 </div>
                                 <br>
                                 <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
                                     <label for="password">Password</label>
                                     <input type="password" class="form-control input-sm" name="password" [(ngModel)]="currentUser.password" id="password" #password="ngModel" required />
-                                        <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required
-                                        </div>
+                                        <!--<div *ngIf="f.submitted && !password.valid" class="help-block">Password is required
+                                        </div>-->
                                 </div>
                                 <br>
-                                <div *ngIf="error" class="alert alert-danger fail">{{error}}</div>
+                                <div *ngIf="error" class="alert fail">{{error}}</div>
                             </div>
                             <div class="login-button-group">
                                 <button [disabled]="loading" class="btn btn-primary">Login</button>
