--- a/dev/index.html
+++ b/dev/index.html
@@ -19,6 +19,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <mean2-app>Loading ...</mean2-app>
+        <mean2-app style="width: 100%">Loading ...</mean2-app>
     </body>
 </html>
