No Shitty Browsers, please

--- a/dev/app/app.layout.html
+++ b/dev/app/app.layout.html
@@ -11,6 +11,10 @@
                 </a>
             </div>
 
+            <div id="no-shitty-browsers">
+                <h1 style="font-size: 3em; color: #eeeeee">No Shitty Browsers, please!</h1>
+            </div>
+
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="bs-navbar-collapse-1">
                 <ul class="nav navbar-nav nav-links-container">
