--- a/dev/app/app.layout.html
+++ b/dev/app/app.layout.html
@@ -28,17 +28,17 @@
                 <ul class="nav navbar-nav nav-links-container">
                     <li class="li-nav-link"><a class="nav-link" routerLink="/"
                         routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                        <span class="glyphicon glyphicon-home"></span> Home</a></li>
+                        <span class="glyphicon glyphicon-home"></span> Начало</a></li>
                     <li class="li-nav-link"><a class="nav-link" routerLink="/about"
-                        routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">About</a></li>
+                        routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">За нас</a></li>
                     <li *ngIf="loggedIn" class="li-nav-link"><a class="nav-link" routerLink="/ads/create"
-                        routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">New Ad</a></li>
+                        routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Нова</a></li>
 
                     <li *ngIf="loggedIn" class="li-nav-link"><a class="nav-link" routerLink="/ads/list/{{currentUser.id}}"
-                        routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">My Ads</a></li>
+                        routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Моите</a></li>
                     <li *ngIf="currentUser.role === 'admin'" class="dropdown li-nav-link" [@navLinkState]="linkState" (click)="toggleLinkState()">
                         <a href="#" id="admin-dropdown" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                            aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+                            aria-haspopup="true" aria-expanded="false">Админ <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li role="separator" class="divider"></li>
                             <li class="menu-item">
